package usantatecla.tictactoe.models;

public enum StateValue {
    INITIAL,
    IN_GAME,
    RESUME,
    EXIT;

}
