package usantatecla.tictactoe.views.graphics;

import usantatecla.tictactoe.controllers.Controller;
import usantatecla.tictactoe.views.View;

public class GraphicsView extends View {

    @Override
    public void interact(Controller controller) {
    }

}
